<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="description">Description...</string>
    <string name="submit">SUBMIT</string>
    <string name="take_picture">Take Picture</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>