<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/tv_email_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/tv_username_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_email_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_password_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_username_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:textColor="#000000"
        android:textSize="18sp"
        android:inputType="textPassword"/>


    <Button
        android:id="@+id/bttn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password_signup"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#009688"
        android:onClick="handle_signup"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/nav_logo_whiteout" />

    <Button
        android:id="@+id/button_loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bttn_signup"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#00BCD4"
        android:text="LOGIN NOW"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:onClick="handle_loginNow"/>

</RelativeLayout>